<!--Definições de mensagens gerais dentro do aplicativo?-->

<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EMF Exposure</string>

    <!-- BEGIN COMMOM WORDS -->
    <string name="base_stations">Base Stations</string>
    <string name="probe">Probe</string>
    <string name="box">Box</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="disclaimer">Disclaimer</string>
    
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="set">Set</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="map">Map</string>

    <string name="developed_by">Developed by Dr. Leandro Carísio Fernandes (carisio at gmail.com)</string>
    <string name="reference">This app is described in detail in \"The Design and Development of an App to Compute Exposure to Electromagnetic Fields [EM Programmer\'s Notebook]\", published in IEEE Antennas and Propagation Magazine, Vol. 59, Issue 2, 2017 (DOI: 10.1109/MAP.2017.2655527).</string>
    <string name="disclaimer_text">This open-source implementation tool is provided \"AS IS\" with no warranties, express or implied, including but not limited to, the warranties of merchantability, fitness for a particullar purpose and non-infringment of intellectual property rights and neither the Developer (or its affiliates) nor the ITU shall be held liable in any event for any damages whatsover (including, without limitation, damages for loss of profits, business interruption, loss of information, or any other pecuniary loss) arising out of or related to the use of or inability to use this tool.</string>
    <string name="disclaimer_overstimate">The evaluations are based on conservative models and may overestimate real exposure.</string>
    <string name="dont_show_disclaimer_again">Don\'t show this message again.</string>
    
    <string name="e_field">E Field</string>
    <string name="total_exposure_rate">TER</string>
    
    <string name="map_type">Map type</string>
    <string name="map_type_none">None</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_normal">Normal</string>

    <string name="open_drawer_description">Open menu</string>
    <string name="close_drawer_description">Close menu</string>
    <string name="add_base_station">Add Base Station</string>
    <string name="edit_base_station">Edit Base Station</string>
    <string name="base_station">Base Station</string>
    <string name="name">Name</string>
	<string name="latitude_with_unit">Latitude (°)</string>
	<string name="longitude_with_unit">Longitude (°)</string>
	<string name="basestation_height_with_unit">Height (m)</string>
	<string name="frequency_with_unit">Frequency (MHz)</string>
	<string name="tilt_with_unit">Tilt (°)</string>
	<string name="vertical_beamwidth_with_unit">Vertical beamwidth (°)</string>
	<string name="transmitted_power_with_unit">EIRP (dBm)</string>
	<string name="sidelobe_envelope_with_unit">Sidelobe envelope (dB)</string>
	<string name="latitude">Latitude</string>
	<string name="longitude">Longitude</string>
	<string name="basestation_height">Height</string>
	<string name="frequency">Frequency</string>
	<string name="tilt">Tilt</string>
	<string name="vertical_beamwidth">Vertical beamwidth</string>
	<string name="transmitted_power">EIRP</string>
	<string name="sidelobe_envelope">Sidelobe envelope</string>
	
	<string name="ok_button">OK</string>
	<string name="yes_button">Yes</string>
	<string name="no_button">No</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	
	<string name="action_bar_add_bs">Add BS</string>
	<string name="action_bar_add_probe">Add probe</string>
	<string name="action_bar_add_box">Add box</string>

	<string name="error_validating_fields">Error validating fields</string>
	<string name="validator_message_string_not_empty">should not be empty.</string>
	<string name="validator_message_decimal_number">should be a decimal number.</string>
	<string name="validator_message_decimal_number_greater_than">should be greater than</string>
	<string name="validator_message_decimal_number_greater_than_or_equal">should be greater than or equal</string>
	<string name="validator_message_decimal_number_lower_than">should be lower than</string>
	<string name="validator_message_decimal_in_interval">should be in the interval</string>
	
	<string name="validator_message_array_decimal_number">should be one or more decimal number separated by an empty space.</string>
	<string name="validator_message_arrays_of_decimal_numbers_of_same_size">should be arrays of same size.</string>
	
	<string name="location_permission_needed">Location Permission Needed</string>
	<string name="location_explanation_message">EMF Exposure works better with Location permission, please accept to use location functionality</string>
	<!-- END COMMOM WORDS -->
	
	<!-- WHEN USER CLICK THE FIRST LOCATION TO CREATE A BOX -->
	<string name="tap_to_create_bs">Tap on the map to create a base station</string>
	<string name="tap_to_delete_bs">Tap at a base station to remove it</string>
	<string name="tap_to_edit_bs">Tap at a base station to edit it</string>
	<string name="tap_to_create_probe">Tap on the map to create a probe</string>
	<string name="tap_to_create_box_begin_point">Tap on the map to begin box creation</string>
	<string name="tap_to_create_box_end_point">Tap at the second point to create a box</string>
	   
	<string name="are_you_sure_you_want_to_delete_all_bs">Are you sure you want to delete all base station?</string>
	<string name="are_you_sure_you_want_to_delete_bs">Are you sure you want to delete it?</string>
	
    <!-- BEGIN NAVIGATION DRAWER MAIN GROUP ARRAY -->    
    <string-array name="nav_drawer_options">
		<item>@string/base_stations</item>
		<item>@string/probe</item>
		<item>@string/box</item>
		<item>@string/settings</item>
		<item>@string/about</item>
    </string-array>
    <!-- END NAVIGATION DRAWER MAIN GROUP ARRAY -->
    
    <!-- BEGIN NAVIGATION DRAWER BASE STATION ARRAY -->
    <string-array name="nav_drawer_base_station_options">
        <item>@string/add</item>
        <item>@string/edit</item>
        <item>@string/delete</item>
        <item>@string/delete_all</item>
    </string-array>
    <!-- END NAVIGATION DRAWER BASE STATION ARRAY -->

    <!-- BEGIN NAVIGATION DRAWER PROBE ARRAY -->
    <string-array name="nav_drawer_probe_options">
        <item>@string/set</item>
        <item>@string/delete</item>
    </string-array>
    <!-- END NAVIGATION DRAWER PROBE ARRAY -->
    
	<!-- END NAVIGATION DRAWER BOX ARRAY -->
    <string-array name="nav_drawer_box_options">
        <item>@string/set</item>
        <item>@string/delete</item>
    </string-array>
    <!-- END NAVIGATION DRAWER BOX ARRAY -->
    
    <string name="probe_height_with_units">Probe height (m)</string>
    <string name="probe_height">Height</string>
    <string name="show">Show</string>
    <string name="colormap">Colormap</string>
    <string name="min_value_vm">Min value (V/m)</string>
    <string name="max_value_vm">Max value (V/m)</string>
    <string name="min_value_percentage">Min value (%)</string>
    <string name="max_value_percentage">Max value (%)</string>
        
    <string-array name="show_in_box_options">
        <item>@string/e_field</item>
        <item>@string/total_exposure_rate</item>
    </string-array>
    <string-array name="map_type_options">
        <item>@string/map_type_none</item>
        <item>@string/map_type_terrain</item>
        <item>@string/map_type_satellite</item>
        <item>@string/map_type_hybrid</item>
        <item>@string/map_type_normal</item>
    </string-array>
<!-- END NAVITAGION DRAWER -->
</resources>
