<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color" >
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/app_background_color"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
	    android:orientation="vertical">
	    
        <TextView
		    android:text="@string/about"
		    style="@style/text_view_section_title"
            />
		<TextView
		    android:text="@string/developed_by"
		    style="@style/text_view_normal"
		    android:layout_width="match_parent"
		    />
		<TextView
		    android:paddingTop="10dp"
		    android:paddingBottom="10dp"
		    android:text="@string/reference"
		    style="@style/text_view_normal"
			android:layout_height="fill_parent"
			android:layout_width="wrap_content"
		    />
        <include layout="@layout/horizontal_line"/>
		<TextView
			android:text="@string/disclaimer"
			style="@style/text_view_section_title"
			/>
		<TextView
			android:text="@string/disclaimer_text"
			style="@style/text_view_normal"
			android:layout_width="match_parent"
			/>
		<TextView
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:text="@string/disclaimer_overstimate"
			style="@style/text_view_normal"
			android:layout_height="fill_parent"
			android:layout_width="wrap_content"
			/>
		<include layout="@layout/horizontal_line"/>
		<TextView
		    android:text=""
		    style="@style/text_view_normal"
		    android:layout_width="match_parent"
		    />
  		<Button
		    android:id="@+id/button_ok"
		    android:text="@string/ok_button"
		    style="@style/button_style"
		    android:padding="10dp"
		    android:layout_gravity="center_horizontal|center_vertical"
		    />
	</LinearLayout>
</ScrollView>