<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/button_border" >

    <TextView
        style="@style/text_view_marker_attr_name"
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/probe" />
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:weightSum="10"
	    android:orientation="horizontal"
	    android:background="@color/app_background_color" >
		<TextView
		    style="@style/text_view_marker_attr_name"
		    android:text="@string/latitude" />
		<TextView
		    android:id="@+id/probe_latitude"
		    style="@style/text_view_marker_attr_value" />
	</LinearLayout>
		
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
  	    android:weightSum="10"
	    android:orientation="horizontal"
	    android:background="@color/app_background_color" >
		<TextView
		    style="@style/text_view_marker_attr_name"
		    android:text="@string/longitude" />
		<TextView
		    android:id="@+id/probe_longitude"
		    style="@style/text_view_marker_attr_value" />
	</LinearLayout>
	
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:weightSum="10"
	    android:orientation="horizontal"
	    android:background="@color/app_background_color"  >
		<TextView
		    style="@style/text_view_marker_attr_name"
		    android:text="@string/probe_height" />
		<TextView
		    android:id="@+id/probe_height"
		    style="@style/text_view_marker_attr_value" />
	</LinearLayout>

	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:weightSum="10"
	    android:orientation="horizontal"
	    android:background="@color/app_background_color">
		<TextView
		    style="@style/text_view_marker_attr_name"
		    android:text="@string/e_field" />
		<TextView
		    android:id="@+id/e_field"
		    style="@style/text_view_marker_attr_value" />
	</LinearLayout>
	
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:weightSum="10"
	    android:orientation="horizontal"
	    android:background="@color/app_background_color">
		<TextView
		    style="@style/text_view_marker_attr_name"
		    android:text="@string/total_exposure_rate" />
		<TextView
		    android:id="@+id/total_exposure_rate"
		    style="@style/text_view_marker_attr_value" />
	</LinearLayout>

</LinearLayout>
