<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color" >
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/app_background_color"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
	    android:orientation="vertical">
	    
        <TextView
            android:id="@+id/add_edit_bs"
		    android:text="@string/add_base_station"
		    style="@style/text_view_section_title"
            />
		<LinearLayout style="@style/line_properties_layout">
			<TextView
			    android:id="@+id/textview_name"
			    android:text="@string/name"
			    style="@style/text_view_normal"
			    android:layout_width="0dp"
			    android:layout_weight="6"
			    />
			<EditText
			    android:id="@+id/edittext_name"
			    style="@style/text_view_normal"
			    android:layout_gravity="center_horizontal|center_vertical"
			    android:gravity="center_horizontal|center_vertical"
			    android:paddingLeft="16dp"
			    android:paddingRight="16dp"
			    android:layout_width="0dp"
			    android:layout_weight="4"
			    android:singleLine="true"
			    />
		</LinearLayout>
		<LinearLayout style="@style/line_properties_layout">
			<TextView
			    android:id="@+id/textview_latitude"
			    android:text="@string/latitude_with_unit"
			    style="@style/text_view_normal"
			    android:layout_width="0dp"
			    android:layout_weight="6"
			    />
			<EditText
			    android:id="@+id/edittext_latitude"
			    style="@style/text_view_normal"
			    android:layout_gravity="center_horizontal|center_vertical"
			    android:gravity="center_horizontal|center_vertical"
			    android:paddingLeft="16dp"
			    android:paddingRight="16dp"
			    android:layout_width="0dp"
			    android:layout_weight="4"
			    android:inputType="numberDecimal|numberSigned"
			    />
		</LinearLayout>
		<LinearLayout style="@style/line_properties_layout">
			<TextView
			    android:id="@+id/textview_longitude"
			    android:text="@string/longitude_with_unit"
			    style="@style/text_view_normal"
			    android:layout_width="0dp"
			    android:layout_weight="6"
			    />
			<EditText
			    android:id="@+id/edittext_longitude"
			    style="@style/text_view_normal"
			    android:layout_gravity="center_horizontal|center_vertical"
			    android:gravity="center_horizontal|center_vertical"
			    android:paddingLeft="16dp"
			    android:paddingRight="16dp"
			    android:layout_width="0dp"
			    android:layout_weight="4"
			    android:inputType="numberDecimal|numberSigned"
			    />
		</LinearLayout>
		<LinearLayout style="@style/line_properties_layout">
			<TextView
			    android:id="@+id/textview_bs_height"
			    android:text="@string/basestation_height_with_unit"
			    style="@style/text_view_normal"
			    android:layout_width="0dp"
			    android:layout_weight="6"
			    />
			<EditText
			    android:id="@+id/edittext_basestation_height"
			    style="@style/text_view_normal"
			    android:layout_gravity="center_horizontal|center_vertical"
			    android:gravity="center_horizontal|center_vertical"
			    android:paddingLeft="16dp"
			    android:paddingRight="16dp"
			    android:layout_width="0dp"
			    android:layout_weight="4"
   			    android:digits="0123456789. "
			    android:inputType="numberDecimal"
			    android:singleLine="true"
			    />
		</LinearLayout>
		<LinearLayout style="@style/line_properties_layout">
			<TextView
			    android:id="@+id/textview_frequency"
			    android:text="@string/frequency_with_unit"
			    style="@style/text_view_normal"
			    android:layout_width="0dp"
			    android:layout_weight="6"
			    />
			<EditText
			    android:id="@+id/edittext_frequency"
			    style="@style/text_view_normal"
			    android:layout_gravity="center_horizontal|center_vertical"
			    android:gravity="center_horizontal|center_vertical"
			    android:paddingLeft="16dp"
			    android:paddingRight="16dp"
			    android:layout_width="0dp"
			    android:layout_weight="4"
   			    android:digits="0123456789. "
			    android:inputType="numberDecimal"
			    android:singleLine="true"
			    />
		</LinearLayout>
		<LinearLayout style="@style/line_properties_layout">
			<TextView
			    android:id="@+id/textview_tilt"
			    android:text="@string/tilt_with_unit"
			    style="@style/text_view_normal"
			    android:layout_width="0dp"
			    android:layout_weight="6"
			    />
			<EditText
			    android:id="@+id/edittext_tilt"
			    style="@style/text_view_normal"
			    android:layout_gravity="center_horizontal|center_vertical"
			    android:gravity="center_horizontal|center_vertical"
			    android:paddingLeft="16dp"
			    android:paddingRight="16dp"
			    android:layout_width="0dp"
			    android:layout_weight="4"
   			    android:digits="0123456789.- "
				android:inputType="numberDecimal|numberSigned"
				android:singleLine="true"
			    />
		</LinearLayout>
		<LinearLayout style="@style/line_properties_layout">
			<TextView
			    android:id="@+id/textview_vertical_beamwidth"
			    android:text="@string/vertical_beamwidth_with_unit"
			    style="@style/text_view_normal"
			    android:layout_width="0dp"
			    android:layout_weight="6"
			    />
			<EditText
			    android:id="@+id/edittext_vertical_beamwidth"
			    style="@style/text_view_normal"
			    android:layout_gravity="center_horizontal|center_vertical"
			    android:gravity="center_horizontal|center_vertical"
			    android:paddingLeft="16dp"
			    android:paddingRight="16dp"
			    android:layout_width="0dp"
			    android:layout_weight="4"
   			    android:digits="0123456789. "
			    android:inputType="numberDecimal"
			    android:singleLine="true"
			    />
		</LinearLayout>
		<LinearLayout style="@style/line_properties_layout">
			<TextView
			    android:id="@+id/textview_transmitted_power"
			    android:text="@string/transmitted_power_with_unit"
			    style="@style/text_view_normal"
			    android:layout_width="0dp"
			    android:layout_weight="6"
			    />
			<EditText
			    android:id="@+id/edittext_transmitted_power"
			    style="@style/text_view_normal"
			    android:layout_gravity="center_horizontal|center_vertical"
			    android:gravity="center_horizontal|center_vertical"
			    android:paddingLeft="16dp"
			    android:paddingRight="16dp"
			    android:layout_width="0dp"
			    android:layout_weight="4"
			    android:digits="0123456789.- "
			    android:inputType="numberDecimal"
			    android:singleLine="true"
			    />
		</LinearLayout>
		<LinearLayout style="@style/line_properties_layout">
			<TextView
			    android:id="@+id/textview_sidelobe_envelope"
			    android:text="@string/sidelobe_envelope_with_unit"
			    style="@style/text_view_normal"
			    android:layout_width="0dp"
			    android:layout_weight="6"
			    />
			<EditText
			    android:id="@+id/edittext_sidelobe_envelope"
			    style="@style/text_view_normal"
			    android:layout_gravity="center_horizontal|center_vertical"
			    android:gravity="center_horizontal|center_vertical"
			    android:paddingLeft="16dp"
			    android:paddingRight="16dp"
			    android:layout_width="0dp"
			    android:layout_weight="4"
			    android:digits="0123456789.- "
				android:inputType="numberDecimal|numberSigned"
				android:singleLine="true"
			    />
		</LinearLayout>
        <include layout="@layout/horizontal_line"/>
		<LinearLayout style="@style/line_properties_layout">
			<Button
			    android:id="@+id/button_cancel"
			    android:text="@string/cancel"
			    style="@style/button_style"
			    android:layout_width="0dp"
			    android:layout_weight="4.5"
			    android:padding="10dp"
			    />
			<View
			    android:layout_height="match_parent"
     			android:layout_width="0dp"
			    android:layout_weight="1"
		        android:background="@color/app_background_color" />
			<Button
			    android:id="@+id/button_save"
			    android:text="@string/save"
			    style="@style/button_style"
			    android:layout_width="0dp"
			    android:layout_weight="4.5"
			    />
		</LinearLayout>
	</LinearLayout>
</ScrollView>